--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
-name: "Github Release"
-author: "Lars Gohr"
+name: "Github Release with Artifact Fix"
+author: "Richard Brežák"
 branding:
   icon: "git-branch"
   color: "gray-dark"
